--- a/website/templates/newoption.html
+++ b/website/templates/newoption.html
@@ -9,6 +9,8 @@
 <form method="POST">
     <!-- Show the form for a new option -->
     {{ form.hidden_tag() }}
+    {{ form.csrf_token }}
+    
     <h1>Füge ein neues Datum hinzu!</h1>
 
     <table>
