--- a/website/templates/newsurvey.html
+++ b/website/templates/newsurvey.html
@@ -5,6 +5,8 @@
 <form method="POST">
     <!-- Show the form for a new survey -->
     {{ form.hidden_tag() }}
+    {{ form.csrf_token }}
+    
     <h1>Finde ein passendes Datum!</h1>
     <table>
         <tr>
