--- a/website/templates/signup.html
+++ b/website/templates/signup.html
@@ -5,6 +5,8 @@
 <form method="POST">
     <!-- Show the registration form -->
     {{ form.hidden_tag() }}
+    {{ form.csrf_token }}
+    
     <h1>Willkommen bei Wennwo!</h1>
     <table>
         <tr>
