--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <footer class="footer bg-dark text-white text-center py-3">
-            <div class="container">
+            <div class="small text-muted">
                 <span>Copyright &copy; 2024 Wennwo</span>
             </div>
         </footer> 
